--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "less"          : ">=1.1.6",
     "mime"          : ">=1.2.2",
     "colors"        : ">=0.5.0",
-    "underscore"    : "1.2.1",
+    "underscore"    : ">=1.2.0",
     "async"         : ">=0.1.15",
-    "uglify-js"     : ">=1.1.1"
+    "uglify-js"     : ">=1.1.1",
+    "CSON"          : "git://github.com/vol4ok/CSON.git"
   }
 }
