--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name"            : "nbuild",
   "description"     : "node.js build system",
   "keywords"        : ["node.js", "builder", "compiler"],
-  "version"         : "0.2.0",
+  "version"         : "0.2.1",
   "author"          : "Sellsto.me team",
   "licenses": [{
-    "type"          :   "MIT",
-    "url"           :    "https://raw.github.com/vol4ok/nbuild/master/LICENSE"
+    "type"          : "MIT",
+    "url"           : "https://raw.github.com/vol4ok/nbuild/master/LICENSE"
   }],
   "engines": {
     "node"          : ">=0.4.12"
@@ -30,6 +30,7 @@
     "underscore"    : ">=1.2.0",
     "async"         : ">=0.1.15",
     "uglify-js"     : ">=1.1.1",
+    "yaml"          : ">=0.2.3",
     "CSON"          : "git://github.com/vol4ok/CSON.git"
   }
 }
