--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lib": "./lib"
   },
   "bin": {
-    "nbuild": "./bin/nb"
+    "nb": "./bin/nb"
   },
   "repository": {
     "type": "git",
@@ -35,10 +35,6 @@
     "async": ">=0.1.15"
   },
   "devDependencies": {
-    "coffee-script": "git://github.com/vol4ok/coffee-script.git#disable-helpers",
-    "coffeekup": ">=0.3.1",
-    "less": ">=1.1.6",
-    "mime": ">=1.2.2",
-    "uglify-js": ">=1.1.1"
+    "coffee-script": "git://github.com/vol4ok/coffee-script.git#disable-helpers"
   }
 }
